[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://coop/scripts/upgrade_overlay.gd" id="1"]

[node name="UpgradeOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP! Choose an Upgrade:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSpacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="UpgradeCards" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Card1" type="PanelContainer" parent="CenterContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
text = "Description of the upgrade effect"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VSpacer" type="Control" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
text = "Lv. 0"
horizontal_alignment = 1

[node name="KeyHint" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
text = "[1]"
horizontal_alignment = 1

[node name="Card2" type="PanelContainer" parent="CenterContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
text = "Description of the upgrade effect"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VSpacer" type="Control" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
text = "Lv. 0"
horizontal_alignment = 1

[node name="KeyHint" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
text = "[2]"
horizontal_alignment = 1

[node name="Card3" type="PanelContainer" parent="CenterContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
text = "Description of the upgrade effect"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VSpacer" type="Control" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
text = "Lv. 0"
horizontal_alignment = 1

[node name="KeyHint" type="Label" parent="CenterContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
text = "[3]"
horizontal_alignment = 1

[node name="HSpacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AcceptButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "ACCEPT"
disabled = true
